--- a/drafting-bio/index.html
+++ b/drafting-bio/index.html
@@ -332,7 +332,7 @@
                 
                 
                 <h1 id="drafting-the-biography">Drafting the Biography</h1>
-<p>After editing the interview transcript, I put together a biographical narrative. The bio-narrative was concise enough to place on a placard next to a hanging piece of art—or a quick introduction for an audience at a film festival—yet it contained enough pertinent and interesting information about the life of the artist that would satisfy a curious art enthusiast. </p>
+<p>After editing the interview transcript, we put together a biographical narrative. The narrative was concise enough to place on a placard next to a hanging piece of art—or a quick introduction for an audience at a film festival—yet it contained enough pertinent and interesting information about the life of the artist that would satisfy a curious art enthusiast. </p>
 <h2 id="revisions">Revisions</h2>
 <p>Some more correspondence was necessary to gather more information in order to fill out the gaps in the biography. The artist was happy to cooperate with the various emails and interviews. </p>
 <h2 id="thats-it">That's it!</h2>
