--- a/drafting-bio/index.html
+++ b/drafting-bio/index.html
@@ -338,7 +338,7 @@
 <h2 id="thats-it">That's it!</h2>
 <p>If you have any questions about this project or want to know more about my experience creating an artist bio, please reach out to me.</p>
 <blockquote>
-<p>-Holly Lesmeister</p>
+<p>Holly Lesmeister</p>
 <p><a href="lesm0013@umn.edu">lesm0013@umn.edu</a></p>
 </blockquote>
                 
